--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "puppeteer": "^13.5.1",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.9.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.11.0"
   }
 }
